<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="title_activity_time_line">Home</string>
    <string name="twitter_icon_title">Twitter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose_hint">Whats Happenning ?</string>
    <string name="tweetBtnLabel">TWEET</string>
    <string name="maxCharCount">140</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>

</resources>