<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/miActionProgress"
        android:title="@string/loading"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="always"
        app:actionLayout="@layout/action_view_progress" />

    <item
        android:id="@+id/twitter_icon"
        android:icon="@mipmap/ic_launcher_twitter_round"
        android:title="@string/twitter_icon_title"
        app:showAsAction="always" />

</menu>
